2007-03-23	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4menu/libxfce4menu-0.1.pc.in: Update pkg-config
	  information to point to the new header file location.

2007-03-23	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4menu/Makefile.am: Install header files to 
	  $includedir/xfce4/libxfce4menu-<version>/libxfce4menu/.

2007-03-23	Jannis Pohlmann <jannis@xfce.org>

	* Move to libxfce4menu. 

2007-03-21	Jannis Pohlmann <jannis@xfce.org>

	* frap-menu-item.{c,h}: Improve set methods a little. Add 
	  support for TryExec as requested by Brian.

2007-03-20	Jannis Pohlmann <jannis@xfce.org>

	* frap-menu.c: Fix several memory leaks, among them a huge
	  310k bomb. You don't believe me? Well, see 
	  http://rafb.net/p/WPbFZy97.html for the numbers. All
	  menus (except the root menu) were ref'd twice and thus, their
	  data never got free'd anywhere.

2007-03-19	Jannis Pohlmann <jannis@xfce.org>

	* frap-menu.c: Initialize threading before anything else - this
	  seems to be a new requirement in GLib. Initialize node_type
	  of the parse context properly. Close directory handle at the
	  end of frap_menu_collect_files_from_path() to avoid mem leaks.
	* frap-menu-item-cache.c: Disable g_object_ref() calls on new
	  menu items. They're already created with a refcount of 1 ...
	* tests/test-display-root-menu.c: Initialize FrapMenu before
	  GTK+ so that threading is initialized earlier.
	* tests/test-root-menu.c: Catch possible GErrors when calling
	  frap_menu_get_root().

2007-03-19	Jannis Pohlmann <jannis@xfce.org>

	* frap-menu.c, docs/reference/tmpl/frap-menu.sgml: Improve
	  API docs a little bit. There's soooo much more to be 
	  documented.

2007-03-19	Jannis Pohlmann <jannis@xfce.org>

	* docs/reference/libfrapmenu-docs.sgml: Remove the xmlns:xi
	  attribute from <book>.

2007-03-19	Jannis Pohlmann <jannis@xfce.org>

	* configure.in.in, Makefile.am, docs/: Initial import of
	  gtk-doc support. Still needs some tweaking though.
